<resources>
    <string name="app_name">TravelPal</string>

    <!-- Button Related Start -->
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="book">Book</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="checkout">Checkout</string>
    <!-- Button Related End -->
...
